[tool.poetry]
name = "deciphon-pressy"
version = "0.1.0"
description = ""
authors = ["Danilo Horta <danilo.horta@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deciphon_pressy" }]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
trio = "^0.22.0"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pyright = "^1.1.283"

[tool.poetry.scripts]
deciphon-pressy = 'deciphon_pressy.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
